# backend-template

./: README.md  pyproject.toml
src/api/: main.py
src/api/sample/: model.py  view.py
src/cli/: common.py  main.py
src/cli/sample/: main.py
